# 13_potentiel_solaire

./: .gitignore  CONTRIBUTING.md  README.md
algorithme/: .dockerignore  .gitconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  publish_algorithme_results.sh  publish_algortihme_results.sh  pyproject.toml  sources.yaml  tox.ini
algorithme/data/: .gitignore  README.md  get_data.sh  saint_denis_reference_data.gpkg  sources.yaml
algorithme/database/: Dockerfile  create-database.sql  env.py  export-geojson.sql
algorithme/database/versions/: 2025_03_15_1309_init_duckdb_database.py  2025_03_26_1549_add_arrondissements.py  2025_03_26_1549_add_communes_split_per_arrondissement.py  2025_03_30_2054_delete_duplicated_etablissements.py  2025_03_30_2155_move_droms_geometries_to_their_real_.py  2025_03_31_2152_add_attributes_to_etablissements_table.py  (+8 more)
algorithme/notebooks/: .gitignore  PVGIS.ipynb  Test_hypotheses_potentiel_solaire.ipynb  amelioration_rattachement_batiments_aux_ecoles.ipynb  analyse_abaque_pour_api_pvgis.ipynb  analyse_batiment_classes.ipynb  analyse_qualite_calcul_surface_utile.ipynb  analyse_qualite_recollement.ipynb  analyse_qualite_resultats_pipeline.ipynb  annuaire_ecoles_amelioration_coordonnees_adresses.ipynb  calcul_potentiel_solaire_etablissements_prioritaires.ipynb  calcul_segmentation_toits_etablissements_prioritaires.ipynb  comparaison_mns.ipynb  comparaison_resultats_algorithmes.ipynb  donnees_par_ecole.ipynb  etude_ombre.ipynb  etude_ombres.ipynb  evaluation_rattachement_batiments_aux_ecoles.ipynb  example_utilisation_segmentation_des_toits.ipynb  exploration_recollement.ipynb  explore_userhorizon_for_pvgis.ipynb  get_dataset_saint_denis.ipynb  pipeline_algorithme.ipynb  pipeline_algorithme_par_departement.ipynb  pipeline_algorithme_par_region.ipynb  preview.ipynb  recuperation-flux-mns.ipynb  remove_holes_and_overlap_arrondissements.ipynb  requirements.txt  segmentation_toits.ipynb  verif_haut_niveau.ipynb  wms_potentiel_solaire.ipynb  wns_hauteur.ipynb
algorithme/potentiel_solaire/: 093_pipeline_algorithme.ipynb  aggregate.py  attach_buildings_to_schools.py  constants.py  database_queries.py  duckdb_manager.py  extract_sample_data.py  geojson_files_creator.py  logger.py  main.py
algorithme/tests/: test_attach_buildings_to_schools.py
application/: .dockerignore  (+15 more)
(+246 files in other folders)
