[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "potentiel_solaire"
version = "0.1.0"
description = "Evaluer le potentiel solaire des établissements scolaires"
authors = ["DataForGood"]
license = " MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
jupyter = "^1.1.1"
fiona = "^1.10.1"
matplotlib= "^3.10.0"
contextily= "^1.6.2"
requests = "^2.32.3"
py7zr = "^0.22.0"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
pvlib = "^0.11.2"
folium = "^0.19.4"
pandas = "^2.2.3"
numpy = "^2.2.2"
shapely = "^2.0.7"
pytz = "^2025.1"
ipython = "^8.32.0"
beautifulsoup4 = "^4.13.3"
papermill = "^2.6.0"
owslib = "^0.32.1"
duckdb = "^1.2.1"
alembic = "^1.15.1"
duckdb-engine = "^0.15.0"
topojson = "^1.9"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
tox = "^4.4.8"

[tool.poetry.scripts]
algorithme = "potentiel_solaire.main:cli"

[tool.ruff]
# Same as Black.
line-length = 96
target-version = "py310"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 10
